--- a/src/styles/formStyles.css
+++ b/src/styles/formStyles.css
@@ -1,217 +1,262 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:100");
 * {
-  font-family: "Montserrat-Medium", sans-serif;
+    font-family: "Montserrat-Medium", sans-serif;
 }
 .App-logo {
-  margin-top: 0px;
-  height: 44px;
-  pointer-events: none;
+
+    height: 50px;
+    padding-right: 30pt;
+    width: 100%;
+
 }
 .nav-bar {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  min-height: 20px;
-  max-height: 44px;
-  width: 100%;
-  background: #333333;
-  color: white;
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: 9999;
-  margin: 0;
-  text-align: center;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 20px;
+    max-height: 44px;
+    width: 100%;
+    background: #333333;
+    color: white;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 9999;
+    margin: 0;
+    text-align: center;
+
 }
 
 .about-banner-card {
-  margin-top: 50px;
-  display: flex;
-  width: 100%;
-  background: linear-gradient(-315deg, #181964, #0045a0);
-  align-items: center;
-  max-height: 50px;
-  max-width: 100%;
+    margin-top: 50px;
+    display: flex;
+    width: 100%;
+    background: linear-gradient(-315deg, #181964, #0045a0);
+    align-items: center;
+    max-height: 50px;
+    max-width: 100%;
 }
 
 .nav-links {
-  min-width: 50%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  list-style: none;
-  text-align: center;
+    min-width: 50%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    list-style: none;
+    text-align: center;
+    margin: 0 auto;
+    position: flex;
+    left: 50%;
+    right: 50%;
+    text-align: center;
 }
 .about-banner {
-  width: 100%;
+    width: 100%;
 
-  padding: 0pt;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    list-style: none;
 }
 .nav-elements {
-  display: flex;
-  padding-left: 10px;
-  padding-right: 10px;
-  justify-content: space-around;
-  align-items: center;
-  list-style: none;
-  font-size: 10px;
-  text-align: center;
+    display: flex;
+    padding-left: 10px;
+    padding-right: 10px;
+    justify-content: space-around;
+    align-items: center;
+    list-style: none;
+    font-size: 10px;
+    text-align: center;
 }
 
 .text-links {
-  color: #d3d3d3;
-  text-decoration: none;
-  font-size: 14px;
+    color: #d3d3d3;
+    text-decoration: none;
+    font-size: 14px;
 }
 
 .text-links:hover {
-  color: #fffefe;
-  text-decoration: none;
-  cursor: pointer;
+    color: #fffefe;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 .text-links:active {
-  color: #fffefe;
-  text-decoration: none;
-  text-shadow: aliceblue;
+    color: #fffefe;
+    text-decoration: none;
+    text-shadow: aliceblue;
 }
 
 .calculator-form {
-  padding: 50px;
-  background: #ccc;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+    padding: 50px;
+    background: #ccc;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 
 .about-base-title {
-  margin-top: 35px;
-  color: #333333;
-  text-align: center;
+    margin-top: 35px;
+    color: #333333;
+    text-align: center;
 }
 
 .main-base-title {
-  margin-top: 36px;
-  color: #333333;
-  text-align: center;
+    margin-top: 36px;
+    color: #333333;
+    text-align: center;
 }
 .main-elements {
-  width: 80%;
-  margin: 0 auto;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 50px;
-  /* min-height: 75vh; */
-  background: #fff;
+    width: 80%;
+    margin: 50px auto 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    /* min-height: 75vh; */
+    background: #fff;
 }
 .container {
-  position: relative;
+    position: relative;
 
-  display: grid;
-  /* grid-template-columns: repeat(auto-fill, minmax(1fr)); */
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-auto-flow: dense;
+    display: grid;
+    /* grid-template-columns: repeat(auto-fill, minmax(1fr)); */
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-flow: dense;
 
-  /* grid-template-rows: auto; */
-  grid-gap: 0 20px;
+    /* grid-template-rows: auto; */
+    grid-gap: 0 20px;
 }
 .box {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  box-shadow: 5px 5px 30px -20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    box-shadow: 5px 5px 30px -20px;
 }
 .container .box {
-  position: relative;
-  height: 400px;
-  background: linear-gradient(-315deg, #181964, #0045a0);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    position: relative;
+    height: 400px;
+    background: linear-gradient(-315deg, #181964, #0045a0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container .box:after {
-  content: " ";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 50%;
-  height: 100%;
-  background: rgba(255, 255, 255, 0.05);
-  pointer-events: none;
+    content: " ";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.05);
+    pointer-events: none;
 }
 
 .content {
-  position: relative;
-  padding: 20px;
-  transform: translateY(40px);
+    position: relative;
+    padding: 20px;
+    transform: translateY(40px);
 }
 .content .main_h2 {
-  position: absolute;
-  top: -60px;
-  right: 20px;
-  margin: 0;
-  padding: 0;
-  font-size: 7.5em;
-  color: rgba(255, 255, 255, 0.1);
-  transition: 0.5s;
+    position: absolute;
+    top: -60px;
+    right: 20px;
+    margin: 0;
+    padding: 0;
+    font-size: 7.5em;
+    color: rgba(255, 255, 255, 0.1);
+    transition: 0.5s;
 }
 .box:hover .content .main_h2 {
-  top: -140px;
+    top: -140px;
 }
 
 .box .content h3 {
-  margin: 0 0 10px;
-  margin-bottom: 30px;
-  padding: 0;
-  font-size: 24px;
-  font-weight: 500;
-  color: #fff;
-  font-weight: bold;
+    margin: 0 0 30px;
+    padding: 0;
+    font-weight: 500;
+    color: #fff;
+    font-weight: bold;
 }
 
 .box .content .main-p {
-  margin: 0;
-  padding: 0;
-  color: #fff;
-  font-size: 16px;
+    margin: 0;
+    padding: 0;
+    color: #fff;
+    font-size: 16px;
 }
 
 .box .content .link-main {
-  position: relative;
-  margin: 35px 0 0;
-  padding: 10px 20px;
-  text-decoration: none;
+    position: relative;
+    margin: 35px 0 0;
+    padding: 10px 20px;
+    text-decoration: none;
 
-  display: inline-block;
-  color: #fff;
-  transition: 0.5s;
-  transform: translateY(-20px);
-  opacity: 0;
+    display: inline-block;
+    color: #fff;
+    transition: 0.5s;
+    transform: translateY(-20px);
+    opacity: 0;
 }
 
 .box:hover .content .link-main {
-  transform: translateY(0);
-  opacity: 1;
-  visibility: visibile;
+    transform: translateY(0);
+    opacity: 1;
+    visibility: visibile;
 }
 
 .box .content .link-main:hover {
-  color: rgb(32, 32, 32);
-  background: #fff;
-  /* background: linear-gradient(-90deg, #242424, #292929); */
+    color: rgb(32, 32, 32);
+    background: #fff;
+    /* background: linear-gradient(-90deg, #242424, #292929); */
 }
 
 .container .box:nth-child(1):before {
-  background: linear-gradient(#32cffa, #0568ea);
+    background: linear-gradient(#32cffa, #0568ea);
+}
+
+.AppTest {
+    display: flexbox;
+
+    /* grid-template-columns: repeat(auto-fill, minmax(1fr)); */
+}
+
+.AppForm {
+    margin: 0 0 30px;
+    float: left;
+    padding: 0;
+    flex-direction: column;
+    text-align: left;
+    color: #fff;
+    position: absolute;
+}
+
+.test-page-form {
+    list-style-type: none;
+}
+.page-h4-test {
+    text-align: left;
+    font-size: 34px;
+    color: #333;
+}
+
+.container-1 {
+    margin-left: 60px;
+}
+.container-1 ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    overflow: auto;
+}
+.container-1 ul li {
+
+    display: block;
+    position: relative;
+    float: left;
+    width: 100%;
+    height: 40px;
 }
