--- a/src/styles/tabStyles.css
+++ b/src/styles/tabStyles.css
@@ -1,59 +1,76 @@
 .tabs {
-  font-family: arial;
-  margin: 0 auto;
-  width: 80%;
-  text-align: left;
-  margin-top: 10px;
+    font-family: arial;
+    margin: 10px auto 0;
+    width: 80%;
+    text-align: left;
 }
+.tab-buttons {
+    margin: 0 auto;
+    position: flex;
+    left: 50%;
+    right: 50%;
+    text-align: center;
 
+}
 .about-text-1 {
-  margin-top: 25px;
-  font-size: 10px;
-  padding: 10px 1.5rem;
+    margin-top: 25px;
+    font-size: 10px;
+    padding: 10px 1.5rem;
 }
 
 .about-text-1-bck {
-  margin-top: 25px;
-  font-size: 20px;
-  background: linear-gradient(-315deg, #181964, #0045a0);
-  padding: 10px 1.5rem;
-  color: white;
+    margin-top: 25px;
+    font-size: 20px;
+    background: linear-gradient(-315deg, #181964, #0045a0);
+    padding: 10px 1.5rem;
+    color: white;
 }
 
 .about-text-2 {
-  font-size: 20px;
-  padding: 10px 1.5rem;
-  color: #333;
+    font-size: 20px;
+    padding: 10px 1.5rem;
+    color: #333;
 }
 
 .about-text-2-bck {
-  font-size: 20px;
-  background: linear-gradient(-315deg, #181964, #0045a0);
-  padding: 10px 1.5rem;
-  color: white;
+    font-size: 20px;
+    background: linear-gradient(-315deg, #181964, #0045a0);
+    padding: 10px 1.5rem;
+    color: white;
 }
 
 .about-text-3-bck {
-  font-size: 20px;
+    font-size: 20px;
 
-  padding: 10px 1.5rem;
-  color: white;
+    padding: 10px 1.5rem;
+    color: white;
 }
-
 button {
-  margin-right: 1px;
-  font-size: 20px;
-  background: transparent;
-  border: none;
-  outline: none;
-  padding: 10px 20px;
-  cursor: pointer;
-  color: rgba(0, 0, 0, 0.4);
-  transition: all ease-in-out 0.2s;
-  border-bottom: 2px solid transparent;
+    margin-right: 1px;
+    font-size: 20px;
+    background: transparent;
+    border: none;
+    outline: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    color: #333;
+    transition: all ease-in-out 0.2s;
+    border-bottom: 2px solid transparent;
+}
+.bttn {
+    margin-right: 1px;
+    font-size: 20px;
+    background: transparent;
+    border: none;
+    outline: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    color: rgba(51, 51, 51, 0.4);
+    transition: all ease-in-out 0.2s;
+    border-bottom: 2px solid transparent;
 }
 
 .active {
-  border-bottom: 1px solid #42b3f4;
-  color: black;
+    border-bottom: 1px solid #42b3f4;
+    color: black;
 }
